--- a/vertical-stepper-form/src/main/res/layout/step_layout.xml
+++ b/vertical-stepper-form/src/main/res/layout/step_layout.xml
@@ -49,7 +49,9 @@
         <TextView
             android:id="@+id/step_title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/vertical_stepper_circle_size"
+            android:ellipsize="none"
+            android:scrollHorizontally="false"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:textColor="#212121"
             android:textSize="@dimen/vertical_stepper_title_text_size"
